feat: affirmation & changepassword API
